nova aulas e práticas

--- a/Módulo 3/aulas/practicing4/index.html
+++ b/Módulo 3/aulas/practicing4/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div id="app">
+        <input type="text" placeholder="Digite aqui seu to-do">
+        <button>Adicione seu to-do</button>
+        <ul></ul>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
